# IRIS-AI

./: .env  .gitignore  Makefile  db_config.py  db_ltm.py  iris_backend.py  iris_graph_diagram.md  iris_stm_checkpoint_test.sqlite-shm  main-steamlit.py  main.py  model_config.py  old_fundamentals.py  old_iris.py  old_sentiment.py  pyproject.toml  requirements.txt  test_iris.py
.devcontainer/: devcontainer.json
agents/: build_rag_store.py  db_ltm.py  fundamentals_agent.py  industry_mapper.py  iris.py  rag_context_provider.py  schema_parser.py  screener_strategies.py  sentiment_agent.py  technicals_agent.py
analysis/: calculations.py  database_queries.py  db_config.py  indicators.py  main.py
artifacts/: tables.py
context/: table_context.md
models/fundamentals/: shareholding.py
tools/: indicators.py  table_info.py  technical_indicators.py
utils/: mapping.py
