[project]
name = "iris-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "ritesh mane",email = "maneriteshh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.12",
    "aiomysql==0.2.0",
    "aiosignal==1.3.2",
    "aiosqlite==0.21.0",
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "arxiv==2.2.0",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "backoff==2.2.1",
    "beautifulsoup4==4.13.4",
    "blinker==1.9.0",
    "blockbuster==1.5.24",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "comm==0.2.2",
    "cryptography==44.0.3",
    "dataclasses-json==0.6.7",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "distro==1.9.0",
    "emoji==2.14.1",
    "executing==2.2.0",
    "faiss-cpu==1.11.0",
    "fastapi==0.115.13",
    "feedparser==6.0.11",
    "filelock==3.18.0",
    "filetype==1.2.0",
    "forbiddenfruit==0.1.4",
    "frozenlist==1.7.0",
    "fsspec==2025.5.1",
    "git-filter-repo==2.47.0",
    "gitdb==4.0.12",
    "GitPython==3.1.44",
    "greenlet==3.2.3",
    "groq==0.26.0",
    "h11==0.16.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.32.6",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==9.3.0",
    "ipython_pygments_lexers==1.1.1",
    "jedi==0.19.2",
    "Jinja2==3.1.6",
    "jiter==0.10.0",
    "joblib==1.5.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "jsonschema_rs==0.29.1",
    "jupyter_client==8.6.3",
    "jupyter_core==5.8.1",
    "langchain==0.3.25",
    "langchain-community==0.3.25",
    "langchain-core==0.3.68",
    "langchain-groq==0.3.2",
    "langchain-huggingface==0.3.0",
    "langchain-openai==0.3.27",
    "langchain-text-splitters==0.3.8",
    "langdetect==1.0.9",
    "langgraph==0.4.8",
    "langgraph-api==0.2.56",
    "langgraph-checkpoint==2.0.26",
    "langgraph-checkpoint-sqlite==2.0.10",
    "langgraph-cli==0.3.3",
    "langgraph-prebuilt==0.2.2",
    "langgraph-runtime-inmem==0.3.0",
    "langgraph-sdk==0.1.70",
    "langsmith==0.3.45",
    "lxml==6.0.0",
    "Markdown==3.8.2",
    "MarkupSafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib-inline==0.1.7",
    "mpmath==1.3.0",
    "multidict==6.4.4",
    "mypy_extensions==1.1.0",
    "mysql-connector-python==9.3.0",
    "narwhals==1.42.0",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "nltk==3.9.1",
    "numpy==2.3.0",
    "olefile==0.47",
    "openai==1.95.1",
    "orjson==3.10.18",
    "ormsgpack==1.10.0",
    "packaging==24.2",
    "pandas==2.3.0",
    "parso==0.8.4",
    "pillow==11.0.0",
    "platformdirs==4.3.8",
    "plotly==6.1.2",
    "prompt_toolkit==3.0.51",
    "propcache==0.3.2",
    "protobuf==6.31.1",
    "psutil==7.0.0",
    "pure_eval==0.2.3",
    "pyarrow==20.0.0",
    "pycparser==2.22",
    "pydantic==2.11.5",
    "pydantic-settings==2.9.1",
    "pydantic_core==2.33.2",
    "pydeck==0.9.1",
    "Pygments==2.19.1",
    "PyJWT==2.10.1",
    "PyMuPDF==1.26.0",
    "PyMySQL==1.1.1",
    "pypdf==5.7.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-iso639==2025.2.18",
    "python-magic==0.4.27",
    "python-multipart==0.0.20",
    "python-oxmsg==0.0.2",
    "pytz==2025.2",
    "pywin32==310",
    "PyYAML==6.0.2",
    "pyzmq==26.4.0",
    "RapidFuzz==3.13.0",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "rpds-py==0.25.1",
    "safetensors==0.5.3",
    "scikit-learn==1.7.0",
    "scipy==1.16.0",
    "sentence-transformers==5.0.0",
    "setuptools==80.9.0",
    "sgmllib3k==1.0.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "SQLAlchemy==2.0.41",
    "sqlite-vec==0.1.6",
    "sqlmodel==0.0.24",
    "sse-starlette==2.1.3",
    "stack-data==0.6.3",
    "starlette==0.46.2",
    "streamlit==1.45.1",
    "structlog==25.4.0",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tiktoken==0.9.0",
    "tokenizers==0.21.1",
    "toml==0.10.2",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.52.4",
    "truststore==0.10.1",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.0",
    "tzdata==2025.2",
    "unstructured==0.18.2",
    "unstructured-client==0.37.4",
    "urllib3==2.4.0",
    "uvicorn==0.34.3",
    "watchdog==6.0.0",
    "watchfiles==1.1.0",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "wikipedia==1.4.0",
    "wrapt==1.17.2",
    "xxhash==3.5.0",
    "yarl==1.20.1",
    "zstandard==0.23.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
